tests/valid/binary_operators/unop_parens.rs
/*
return: -3
*/

main(): i32 {
    return ~(1 + 1);
}