tests/invalid/loops/too_many_for_clauses.rs
/*
fail: 1
*/

main(): i32 {
    for (;;;)
        3;
    return 0;
}